# SRBedding

./: .gitignore  BERTopic_testing.ipynb  README.md  api_request_parallel_processor.py  pyproject.toml  requirements.txt  training_dataset_pipeline.ipynb  utils.py  utils_openAI.py
evaluation-pipetine/: evaluation-pipieline.py  make-evaluation-datasets.ipynb
evaluation-pipetine-test/: CustomInformationRetrievalEvaluator.py  api_request_parallel_processor.py  cookbook.ipynb  evaluation-pipeline.ipynb  evaluation-pipieline.py  final-evaluation.ipynb  make-evaluation-datasets.ipynb  openai.ipynb  tests.ipynb
evaluation_pipeline/: CustomInformationRetrievalEvaluator.py  evaluation_pipieline.py  make-evaluation-datasets.ipynb
llama_translation/: llama_trans.ipynb  prompt.py
notebooks/: testing_embeddings.ipynb  translation-parallel.ipynb  translation-pipeline.ipynb
prompting/: Prompting.ipynb
training-dataset/: chunking_pipeline.py  datasets_loading.py  kaggle_datasets_loading.py  lala.txt  making-training-dataset.ipynb  query_creation_pipeline.py  test.ipynb  (+3 more)
translation_pipeline/: .gitignore  README.md  batch_test.ipynb  data_translate.py  processing_batch.py  prompts.py  pyproject.toml  sending_batch.py  something.ipynb  test  translation-pipeline.py  translation_pipeline.py
translation_pipeline/failed/: failed_naquestions.json
translation_pipeline/loaders/: base.py  mteb_loader.py
translation_pipeline/loaders/tests/: test_mteb_loader.py
translation_pipeline/pipelines/: base.py  translation_pipeline.py
translation_pipeline/savers/: base.py  huggingface_saver.py  pandas_saver.py
translation_pipeline/translation_pipeline_test/: failedids.txt
translation_pipeline/translators/: base.py  google_translator.py  openai_translator.py
translation_pipeline/translators/tests/: test_openai.py
translation_pipeline/utils/: logger.py
(+80 files in other folders)
